--- a/form.html
+++ b/form.html
@@ -4,13 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>OnlyPaws</title>
+    <title>Cat Form</title>
 </head>
 <body>
-
-    <h1>OnlyPaws</h1>
-
-    <h2>Cat & Kitten photos</h2>
     
 </body>
 </html>
