Added next styles to index.html and h3. Set up navbar for styling.

--- a/index.html
+++ b/index.html
@@ -8,9 +8,27 @@
 </head>
 <body>
 
+    <!--Header-->
+
+    <div class="header">
     <h1>OnlyPaws</h1>
 
-    <h2>Cat & Kitten photos</h2>
+    <h3>🐾The best spot for cat & kitten content🐾</h3>
+</div>
+
+    <!--Navigation-->
+
+    <div class="navbar">
+    <ul>
+        <li><a href="index.html"> Home</a></li>
+        <li>🐾<a href="gallery.html"> Gallery</a></li>
+        <li>🐾<a href="facts.html"> Facts</a></li>
+        <li>🐾<a href="form.html"> Form</a></li>
+        <li>🐾<a href="about.html"> About</a></li>
+    </ul>
+    </div>
+
+    <h2>The best spot for cat & kitten content</h2>
     
 </body>
 </html>
