Updated navigation and footer in index.html

--- a/index.html
+++ b/index.html
@@ -34,7 +34,13 @@
     </div>
 
     <!--Main Content-->
-
+ <div class="main-content">
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rerum similique deleniti ab voluptatem suscipit doloribus ipsam ipsum? Modi hic placeat possimus eos. Accusamus autem nihil voluptatibus? Obcaecati totam perferendis consequatur.</p>
+    <br>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit </p>
+    <br>
+   <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit odio dolorum, possimus omnis quisquam quae fugiat veniam accusantium? Earum modi similique blanditiis exercitationem culpa incidunt nulla sed laudantium sit dolores?</p>
+    </div>
 
 
     <!--Footer-->
